--- a/ideaBoxFront/src/app/nav/nav.component.html
+++ b/ideaBoxFront/src/app/nav/nav.component.html
@@ -1,28 +1,16 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>ideaBoxFront</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <h1>Social Idea Box Network 3000 du FUTUR</h1>
+  </mat-toolbar-row>
+  <mat-toolbar-row>
+    <div>
+      <a mat-button [routerLink]="">Link</a>
+      <a mat-button [routerLink]="">Zelda</a>
+      <a mat-button [routerLink]="">Ganondorf</a>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+/!\ CONTENT HERE /!\
+
+<router-outlet></router-outlet>
