ajout des icons de vote, collaboration et commentaire

--- a/ideaBoxFront/src/app/bar-icons-idee/bar-icons-idee.component.html
+++ b/ideaBoxFront/src/app/bar-icons-idee/bar-icons-idee.component.html
@@ -1,1 +1,6 @@
-<mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
+<mat-icon aria-hidden="false">thumb_up_alt</mat-icon>
+<mat-icon aria-hidden="false">thumb_down_alt</mat-icon>
+<mat-icon aria-hidden="false">comment</mat-icon>
+<!--si collaborateur-->
+<mat-icon aria-hidden="false"><mat-icon aria-hidden="false">people_alt</mat-icon></mat-icon>
+<mat-icon aria-hidden="false"><mat-icon aria-hidden="false">person_add</mat-icon></mat-icon>
