--- a/ideaBoxFront/src/app/components/front-page/front-page.component.html
+++ b/ideaBoxFront/src/app/components/front-page/front-page.component.html
@@ -18,6 +18,9 @@
         <mat-card-content class="dashboard-card-content">
           <div>{{card.content}}</div>
         </mat-card-content>
+        <mat-card-footer>
+        <app-bar-icons-idee></app-bar-icons-idee>
+        </mat-card-footer>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
