--- a/ideaBoxFront/src/app/nav/nav.component.html
+++ b/ideaBoxFront/src/app/nav/nav.component.html
@@ -1,16 +1,41 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <h1>Social Idea Box Network 3000 du FUTUR</h1>
-  </mat-toolbar-row>
-  <mat-toolbar-row>
-    <div>
-      <a mat-button [routerLink]="">Link</a>
-      <a mat-button [routerLink]="">Zelda</a>
-      <a mat-button [routerLink]="">Ganondorf</a>
-    </div>
-  </mat-toolbar-row>
-</mat-toolbar>
+<div style="height: 80vh;">
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Responsive Navigation</span>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+        <a href="#" mat-button>Menu Item 1</a>
+        <a href="#" mat-button>Menu Item 2</a>
+        <a href="#" mat-button>Menu Item 3</a>
+        <a href="#" mat-button>Menu Item 4</a>
+        <a href="#" mat-button>Menu Item 5</a>
+        <a href="#" mat-button>Menu Item 6</a>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
 
-/!\ CONTENT HERE /!\
+  <mat-sidenav-container fxFlexFill>
+    <mat-sidenav #sidenav>
+      <mat-nav-list>
+        <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+        <a href="#" mat-list-item>Menu Item 1</a>
+        <a href="#" mat-list-item>Menu Item 2</a>
+        <a href="#" mat-list-item>Menu Item 3</a>
+        <a href="#" mat-list-item>Menu Item 4</a>
+        <a href="#" mat-list-item>Menu Item 5</a>
+        <a href="#" mat-list-item>Menu Item 6</a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content fxFlexFill>
+    
+      /!\ CONTENT HERE /!\
+      
+      <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
