--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
@@ -1,1 +1,32 @@
-<p>idea-post works!</p>
+<mat-grid-list cols="2" rowHeight="3:1">
+    <mat-grid-tile>
+        <img src="https://picsum.photos/600/200?random={{i}}" />
+
+
+    </mat-grid-tile>
+    <mat-grid-tile rowspan="2">
+            
+        {{card.content}}
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque dictum risus in vehicula.
+        Aenean congue, massa a suscipit consequat, metus massa mattis sapien, at elementum metus ante a ante. Morbi id
+        neque ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vel diam sitis pulvinar,
+        cursus id nunc. Maecenas consectetur libero ut nibh luctus, vel finibus odio consectetur.
+
+        <mat-grid-tile-footer><button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+                <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu" xPosition="before">
+                <button mat-menu-item>Expand</button>
+                <button mat-menu-item>Remove</button>
+            </mat-menu>
+        </mat-grid-tile-footer>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <mat-grid-tile-header>
+            {{card.title}}
+            
+        </mat-grid-tile-header>
+
+    </mat-grid-tile>
+</mat-grid-list>
