--- a/ideaBoxFront/src/app/nav/nav.component.html
+++ b/ideaBoxFront/src/app/nav/nav.component.html
@@ -8,26 +8,22 @@
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a href="#" mat-button>Menu Item 1</a>
-        <a href="#" mat-button>Menu Item 2</a>
-        <a href="#" mat-button>Menu Item 3</a>
-        <a href="#" mat-button>Menu Item 4</a>
-        <a href="#" mat-button>Menu Item 5</a>
-        <a href="#" mat-button>Menu Item 6</a>
+        <a href="#" mat-button>Top</a>
+        <a href="#" mat-button>Link</a>
+        <a href="#" mat-button>Zelda</a>
+        <a href="#" mat-button>Ganondorf</a>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
 
   <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav>
+    <mat-sidenav #sidenav style="width:200px;">
       <mat-nav-list>
-        <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
-        <a href="#" mat-list-item>Menu Item 1</a>
-        <a href="#" mat-list-item>Menu Item 2</a>
-        <a href="#" mat-list-item>Menu Item 3</a>
-        <a href="#" mat-list-item>Menu Item 4</a>
-        <a href="#" mat-list-item>Menu Item 5</a>
-        <a href="#" mat-list-item>Menu Item 6</a>
+        <a href="#" mat-list-item>Side</a>
+        <a href="#" mat-list-item>Link</a>
+        <a href="#" mat-list-item>Zelda</a>
+        <a href="#" mat-list-item>Ganondorf</a>
+        <!-- <a (click)="sidenav.toggle()" href="" mat-list-item style="position:bottom;">Close</a> -->
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
