pastille-categorie avec icone

--- a/ideaBoxFront/src/app/pastille-categorie/pastille-categorie.component.html
+++ b/ideaBoxFront/src/app/pastille-categorie/pastille-categorie.component.html
@@ -1,2 +1,10 @@
 
-<a data click-id="subIdeaBox" class="" href =""><img src="icon.png" />{{nomPastilleCategorieEcologie}}</a>
+<div><mat-chip-list aria-label="Pastille de Categorie" >
+    <mat-chip><mat-icon>business</mat-icon> {{nomPastilleCategorieEntreprenariat}}</mat-chip>
+    <mat-chip><mat-icon>school</mat-icon> {{nomPastilleCategorieEtudeFormation}}</mat-chip>
+    <mat-chip><mat-icon>videogame_asset</mat-icon>{{nomPastilleCategorieJeux}}</mat-chip>
+    <mat-chip><mat-icon>group</mat-icon>{{nomPastilleCategorieEntreAide}}</mat-chip>
+    <mat-chip><mat-icon>nature</mat-icon>{{nomPastilleCategorieNature}}</mat-chip>
+    <mat-chip><mat-icon>computer</mat-icon> {{nomPastilleCategorieTechnologie}}</mat-chip>
+</mat-chip-list>
+</div>
