--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.css
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.css
@@ -23,6 +23,10 @@ img {
 .ideaContent{
     padding-left:10px;
 }
-app-bar-icons-idee{
-    background-color: coral;
+
+app-pastille-categorie{
+    position: absolute;
+    top: 5px;
+    right: 50px;
+
 }
