--- a/ideaBoxFront/src/app/pages/page-not-found/page-not-found.component.html
+++ b/ideaBoxFront/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,3 @@
-<p>page-not-found works!</p>
+<h1 class="mat-h1">404</h1>
+<img src="http://www.google.com/images/errors/robot.png"/>
+<h3 class="mat-h3">It seems that this page doesn't exist</h3>
