--- a/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.html
+++ b/ideaBoxFront/src/app/components/pastille-categorie/pastille-categorie.component.html
@@ -1,6 +1,5 @@
 
-<div><mat-chip-list aria-label="Pastille de Categorie" >
+<mat-chip-list aria-label="Pastille de Categorie" >
     <mat-chip><mat-icon>business</mat-icon> {{nomPastilleCategorieEntreprenariat}}</mat-chip>
   
 </mat-chip-list>
-</div>
