--- a/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
+++ b/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
@@ -1,2 +1,5 @@
 <p>page-idea works!</p>
-<app-idea-post></app-idea-post>
+<mat-card>
+    
+    <app-idea-post [i]='1' [card]='{{card}}' ></app-idea-post>
+</mat-card>
