--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div style="height: 80vh;">
+<div class="topnav-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
@@ -8,16 +8,13 @@
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a href="#" mat-button>Top</a>
-        <a href="#" mat-button>Link</a>
-        <a href="#" mat-button>Zelda</a>
-        <a href="#" mat-button>Ganondorf</a>
+        <app-nav-links></app-nav-links>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
 
   <mat-sidenav-container fxFlexFill>
-    <mat-sidenav #sidenav style="width:200px;">
+    <mat-sidenav #sidenav>
       <mat-nav-list>
         <a href="#" mat-list-item>Side</a>
         <a href="#" mat-list-item>Link</a>
