--- a/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
+++ b/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
@@ -1,5 +1,4 @@
 <p>page-idea works!</p>
 <mat-card>
-    
-    <app-idea-post [i]='1' [card]='{{card}}' ></app-idea-post>
+    <app-idea-full [card]='card' ></app-idea-full>
 </mat-card>
