centrage de l'icon collaborateur sur son bouton

--- a/ideaBoxFront/src/app/components/bar-icons-idee/bar-icons-idee.component.html
+++ b/ideaBoxFront/src/app/components/bar-icons-idee/bar-icons-idee.component.html
@@ -13,5 +13,5 @@
         </button>
 
 <button mat-icon-button aria-label="icon-button collaborateur" (click)="demandeCollaborateur()">
-        <mat-icon class="{{social.collaborateur ? 'material-icons' : 'material-icons-outlined'}}" >person_add_outline</mat-icon>
+        <mat-icon class="{{social.collaborateur ? 'material-icons' : 'material-icons-outlined'}}" >person_add</mat-icon>
     </button>
