--- a/ideaBoxFront/src/app/components/idea-full/idea-full.component.html
+++ b/ideaBoxFront/src/app/components/idea-full/idea-full.component.html
@@ -22,5 +22,6 @@
                 cursus id nunc. Maecenas consectetur libero ut nibh luctus, vel finibus odio consectetur.
             </div>
         </mat-grid-tile>
+        <app-bar-icons-idee></app-bar-icons-idee>
         <app-pastille-categorie></app-pastille-categorie>
     </mat-grid-list>
