--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -4,11 +4,11 @@
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Responsive Navigation</span>
+      <h1>Social Idea</h1>
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <app-nav-links></app-nav-links>
+        <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
@@ -16,10 +16,7 @@
   <mat-sidenav-container fxFlexFill>
     <mat-sidenav #sidenav>
       <mat-nav-list>
-        <a href="#" mat-list-item>Side</a>
-        <a href="#" mat-list-item>Link</a>
-        <a href="#" mat-list-item>Zelda</a>
-        <a href="#" mat-list-item>Ganondorf</a>
+        <a mat-list-item *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
