--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -1,15 +1,17 @@
 <div class="topnav-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-xs>
         <mat-icon>menu</mat-icon>
       </button>
-      <h1>Social Idea</h1>
-      <span class="menu-spacer"></span>
-      <div fxShow="true" fxHide.lt-md>
+      <span id="titre">Social Idea</span>
+      <span id="slogan">Think, Share, Create</span>
+      <div fxShow="true" fxHide.lt-sm>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
       </div>
+      <span class="menu-spacer"></span>
+      
     </mat-toolbar-row>
   </mat-toolbar>
 
