--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -11,7 +11,7 @@
         <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
       </div>
       <span class="menu-spacer"></span>
-      
+      <app-searchbar></app-searchbar>
     </mat-toolbar-row>
   </mat-toolbar>
 
