dissociation collaborateur bar icon + inputCommentaire

--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.css
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.css
@@ -35,3 +35,8 @@ app-bar-icons-idee{
     bottom: 0px;
     left: 5px; 
 }
+app-bouton-collaborateur{
+    position: absolute;
+    bottom: 0px;
+    left: 5px; 
+}
