--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
@@ -7,7 +7,7 @@
     </mat-grid-tile>
     <mat-grid-tile>
         <div class="ideaContent">
-            
+
             <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
                 <mat-icon>more_vert</mat-icon>
             </button>
@@ -17,14 +17,17 @@
             </mat-menu>
             {{card.content}}
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque dictum risus in vehicula.
-            Aenean congue, massa a suscipit consequat, metus massa mattis sapien, at elementum metus ante a ante. Morbi id
+            Aenean congue, massa a suscipit consequat, metus massa mattis sapien, at elementum metus ante a ante. Morbi
+            id
             neque ante. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vel diam sitis pulvinar,
             cursus id nunc. Maecenas consectetur libero ut nibh luctus, vel finibus odio consectetur.
         </div>
     </mat-grid-tile>
     <app-pastille-categorie></app-pastille-categorie>
     <app-bar-icons-idee></app-bar-icons-idee>
-<!--<mat-grid-tile colspan="2">
+    <app-bouton-collaborateur></app-bouton-collaborateur>
+
+    <!--<mat-grid-tile colspan="2">
 <app-bar-icons-idee></app-bar-icons-idee>
 </mat-grid-tile>-->
 </mat-grid-list>
