popup list collaborateurs  en cours

--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
@@ -1,8 +1,9 @@
 <h3 mat-dialog-title>Liste des Collaborateurs</h3>
 <mat-dialog-content class="mat-typography">
 
-
-
+    <ul *ngFor="let item of collaborateurList">
+        <li> <img src="{{item.img}}"> ,{{item.pseudo}}</li>
+    </ul>
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
