--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -4,11 +4,14 @@
       <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-xs>
         <mat-icon>menu</mat-icon>
       </button>
-      <span id="titre">Social Idea</span>
-      <span id="slogan">Think, Share, Create</span>
+      <a id="home" routerLink="">
+        <span id="titre">Social Idea</span>
+        <span id="slogan">Think, Share, Create</span>
+      </a>
       <div fxShow="true" fxHide.lt-sm>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
+        <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }">{{link.pageName}}</a>
       </div>
       <span class="menu-spacer"></span>
       <app-searchbar></app-searchbar>
@@ -18,11 +21,12 @@
   <mat-sidenav-container fxFlexFill>
     <mat-sidenav #sidenav>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active">{{link.pageName}}</a>
+        <a mat-list-item *ngFor="let link of links" routerLink="{{link.pageLink}}"
+          routerLinkActive="active">{{link.pageName}}</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
-      
+
       <router-outlet></router-outlet>
 
     </mat-sidenav-content>
