--- a/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
+++ b/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
@@ -1,1 +1,10 @@
-<p>input-commentaire works!</p>
+<mat-card>
+    <section class="entete"><img
+            src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" />Test
+    </section>
+    <div class="inputCom">
+        <mat-form-field>
+            <textarea matInput placeholder="Votre commentaire"></textarea>
+        </mat-form-field>
+    </div>
+</mat-card>
