--- a/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
+++ b/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
@@ -7,4 +7,5 @@
             <textarea matInput placeholder="Votre commentaire"></textarea>
         </mat-form-field>
     </div>
+    <button mat-button>Envoyer</button>
 </mat-card>
