classCollaborateurPopUp en interface + scroll infini (en cours)s)

--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
@@ -2,7 +2,9 @@
 <mat-dialog-content class="mat-typography">
 
     <ul *ngFor="let item of collaborateurList">
-        <li> <img src="{{item.img}}"> ,{{item.pseudo}}</li>
+        <li>
+            <img src="{{item.img}}"> {{item.pseudo}}
+        </li>
     </ul>
 
 </mat-dialog-content>
