--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -1,20 +1,25 @@
 <div class="topnav-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-xs>
+      <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
         <mat-icon>menu</mat-icon>
       </button>
       <a id="home" routerLink="">
         <span id="titre">Social Idea</span>
         <span id="slogan">Think, Share, Create</span>
       </a>
-      <div fxShow="true" fxHide.lt-sm>
+      <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">{{link.pageName}}</a>
       </div>
       <span class="menu-spacer"></span>
       <app-searchbar></app-searchbar>
+      <span class="menu-spacer"></span>
+      <div fxShow="true" fxHide.lt-md>
+        <span class="menu-spacer"></span>
+        <app-menu-connexion></app-menu-connexion>
+      </div>
     </mat-toolbar-row>
   </mat-toolbar>
 
@@ -24,6 +29,7 @@
         <a mat-list-item *ngFor="let link of links" routerLink="{{link.pageLink}}"
           routerLinkActive="active">{{link.pageName}}</a>
       </mat-nav-list>
+      <app-menu-connexion></app-menu-connexion>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
 
