--- a/ideaBoxFront/src/app/pages/front-page/front-page.component.html
+++ b/ideaBoxFront/src/app/pages/front-page/front-page.component.html
@@ -1,10 +1,9 @@
 <div class="grid-container">
-    <mat-grid-list cols="2" rowHeight="600px">
-      <mat-grid-tile *ngFor="let card of cards | async;let i =index" [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card" tabindex='i'>
-             <app-idea-post [i]='i' [card]='card'></app-idea-post>
-        </mat-card>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </div>
-  
+  <mat-grid-list cols="2" rowHeight="600px">
+    <mat-grid-tile *ngFor="let idee of ideeService.idees; let i =index" [colspan]="2" [rowspan]="1">
+      <mat-card class="dashboard-card" tabindex="i">
+        <app-idea-post [i]='i' [idee]='idee'></app-idea-post>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
