npm install ngx-cookie-service

--- a/ideaBoxFront/src/app/components/menu-connexion/menu-connexion.component.html
+++ b/ideaBoxFront/src/app/components/menu-connexion/menu-connexion.component.html
@@ -1,1 +1,12 @@
-<p>menu-connexion works!</p>
+<div *ngIf="posmenu == 'top'">
+    <a mat-button routerLink="/inscription" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }">Inscription</a>
+    <a mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+        (click)="testSession()">Connexion</a>
+</div>
+<div *ngIf="posmenu == 'side'">
+    <a mat-list-item routerLink="/inscription" routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }">Inscription</a>
+    <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+        (click)="testSession()">Connexion</a>
+</div>
