--- a/ideaBoxFront/src/app/components/nav/nav.component.html
+++ b/ideaBoxFront/src/app/components/nav/nav.component.html
@@ -9,27 +9,22 @@
         <span id="slogan">Think, Share, Create</span>
       </a>
       <div fxShow="true" fxHide.lt-md>
-        <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <a mat-button *ngFor="let link of links" routerLink="{{link.pageLink}}" routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }">{{link.pageName}}</a>
       </div>
       <span class="menu-spacer"></span>
       <app-searchbar></app-searchbar>
       <span class="menu-spacer"></span>
-      <div fxShow="true" fxHide.lt-md>
-        <span class="menu-spacer"></span>
-        <app-menu-connexion></app-menu-connexion>
-      </div>
+      <app-menu-connexion fxShow="true" fxHide.lt-md posmenu="top"></app-menu-connexion>
     </mat-toolbar-row>
   </mat-toolbar>
-
   <mat-sidenav-container fxFlexFill>
     <mat-sidenav #sidenav>
       <mat-nav-list>
+        <app-menu-connexion posmenu="side"></app-menu-connexion>
         <a mat-list-item *ngFor="let link of links" routerLink="{{link.pageLink}}"
           routerLinkActive="active">{{link.pageName}}</a>
       </mat-nav-list>
-      <app-menu-connexion></app-menu-connexion>
     </mat-sidenav>
     <mat-sidenav-content fxFlexFill>
 
