focus input Commentaire click

--- a/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
+++ b/ideaBoxFront/src/app/components/input-commentaire/input-commentaire.component.html
@@ -4,7 +4,7 @@
     </section>
     <div class="inputCom">
         <mat-form-field>
-            <textarea matInput placeholder="Votre commentaire"></textarea>
+            <textarea id="texteCom" #searchElement matInput placeholder="Votre commentaire"></textarea>
         </mat-form-field>
     </div>
     <button mat-button>Envoyer</button>
