Connexion / Deconnexion avec cookie

--- a/ideaBoxFront/src/app/components/menu-connexion/menu-connexion.component.html
+++ b/ideaBoxFront/src/app/components/menu-connexion/menu-connexion.component.html
@@ -1,12 +1,19 @@
-<div *ngIf="posmenu == 'top'">
-    <a mat-button routerLink="/inscription" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }">Inscription</a>
-    <a mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-        (click)="testSession()">Connexion</a>
+<div *ngIf="estConnecte == false">
+    <div *ngIf="posmenu == 'side'">
+        <a mat-list-item routerLink="/inscription" routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }">
+            Inscription</a>
+        <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+            (click)="createSession()">Connexion</a>
+    </div>
+    <div *ngIf="posmenu == 'top'">
+        <a mat-button routerLink="/inscription" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            Inscription</a>
+        <a mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+            (click)="createSession()">Connexion</a>
+    </div>
 </div>
-<div *ngIf="posmenu == 'side'">
-    <a mat-list-item routerLink="/inscription" routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }">Inscription</a>
-    <a mat-list-item routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
-        (click)="testSession()">Connexion</a>
+<div *ngIf="estConnecte == 'true'">
+    <a mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
+        (click)="deleteSession()">Déconnexion</a>
 </div>
