--- a/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
+++ b/ideaBoxFront/src/app/components/idea-post/idea-post.component.html
@@ -15,7 +15,7 @@
         <app-pastille-categorie></app-pastille-categorie>
     </div>
 </mat-card-header>
-<img mat-card-image src="{{idee._image}}" /><!-- TODO ; Fetch image from database-->
+<img mat-card-image src="{{idee._image}}" />
 <mat-card-content>
     {{idee._content}}
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque dictum risus in vehicula.
