--- a/ideaBoxFront/src/app/components/idea-full/idea-full.component.css
+++ b/ideaBoxFront/src/app/components/idea-full/idea-full.component.css
@@ -2,43 +2,14 @@ mat-card-title {
     width: max-content;
 }
 
-.ideaHeader {
-    width: 100%;
-    text-align: center;
-}
 
-.myCardTitle {
-    position: absolute;
-    top: 15px;
-    left: 20px;
-}
 
 .more-button {
-    position: absolute;
-    top: 5px;
-    right: 0px;
+    float: right;
 }
 
-img {
-    margin-top: 50px;
-}
-
-
-.ideaContent {
-    margin-top: 20px;
-    padding-left: 10px;
-    margin-bottom: 50px;
-}
 
 app-pastille-categorie {
-    position: absolute;
-    top: 10px;
-    right: 50px;
+    float: right;
 
-}
-
-app-bar-icons-idee {
-    position: absolute;
-    bottom: 5px;
-    left: 10px;
 }
