--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
@@ -1,11 +1,21 @@
 <h3 mat-dialog-title>Liste des Collaborateurs</h3>
 <mat-dialog-content class="mat-typography">
 
-    <ul *ngFor="let item of collaborateurList">
+    <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+
+
+        <div *cdkVirtualFor="let item of collaborateurList; templateCacheSize: 0" class="example-item">
+            <img src="{{item.img}}">
+            {{item.pseudo}}
+        </div>
+    </cdk-virtual-scroll-viewport>
+
+
+    <!--    <ul *ngFor="let item of collaborateurList">
         <li>
             <img src="{{item.img}}"> {{item.pseudo}}
         </li>
-    </ul>
+    </ul>-->
 
 </mat-dialog-content>
 <mat-dialog-actions align="end">
