liste pop-up collaborateurs terminé

--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.css
@@ -1,20 +1,38 @@
-img{
-    max-width: 40%;
-    max-height: 40%;
-    padding-right : 1px;
+h3{
+  text-align : center;
 }
+
+img{
+    max-width: 10%;
+    max-height: 10%;
+    padding-right : 50px;
+    padding-left : 100px;
+    padding-top: 20px;
+}
+
+
 .mat-dialog-content {
     align-items: stretch;
+    max-height: 0%;
   }
 
   .example-viewport {
-    height: 200px;
-    width: 200px;
-    border: 1px solid black;
+    height: 500px;
+    width: 700px;
+    border: 1px solid white;
   }
+
+  a{
+    text-decoration:none;
+    color: black;
+  }
+
+.item.pseudo{
+  color : blue;
+}
+
   
-  .example-item {
-    height: 50px;
-  }
+  
+
   
 
