--- a/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
+++ b/ideaBoxFront/src/app/components/popup-list-collaborateurs/popup-list-collaborateurs.component.html
@@ -5,8 +5,7 @@
 
 
         <div *cdkVirtualFor="let item of collaborateurList; templateCacheSize: 0" class="example-item">
-            <img src="{{item.img}}">
-            {{item.pseudo}}
+            <a href="/" class="item.pseudo"> <img src="{{item.img}}" /> {{item.pseudo}} </a>
         </div>
     </cdk-virtual-scroll-viewport>
 
