comportement du CommentButton
differenciation selon dans quel composant il se trouve

--- a/ideaBoxFront/src/app/components/bar-icons-idee/bar-icons-idee.component.html
+++ b/ideaBoxFront/src/app/components/bar-icons-idee/bar-icons-idee.component.html
@@ -1,2 +1,2 @@
 <app-vote></app-vote>
-<app-commentaire-bouton></app-commentaire-bouton>
+<app-commentaire-bouton [openComment]='openComment'></app-commentaire-bouton>
