--- a/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
+++ b/ideaBoxFront/src/app/pages/page-idea/page-idea.component.html
@@ -1,4 +1,6 @@
 <mat-card>
     <app-idea-full [idee]='idee'></app-idea-full>
-    <app-liste-commentaires></app-liste-commentaires>
+    <app-input-commentaire></app-input-commentaire>
+    <app-commentaire></app-commentaire>
+
 </mat-card>
